# ChangeLog for dev-ruby/rails_autolink
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rails_autolink/ChangeLog,v 1.4 2014/04/24 21:06:42 mrueg Exp $

  24 Apr 2014; Manuel Rüger <mrueg@gentoo.org> -rails_autolink-1.0.9.ebuild:
  Cleanup old.

*rails_autolink-1.1.5 (06 Apr 2014)

  06 Apr 2014; Hans de Graaff <graaff@gentoo.org> +rails_autolink-1.1.5.ebuild:
  Version bump.

  03 Mar 2013; Hans de Graaff <graaff@gentoo.org> rails_autolink-1.0.9.ebuild:
  Add back ruby18 support from my overlay and skip the few tests failing due to
  hash ordering.

*rails_autolink-1.0.9 (25 Jan 2013)

  25 Jan 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  +files/rails_autolink-1.0.9-fixes.patch, +metadata.xml,
  +rails_autolink-1.0.9.ebuild:
  Initial import of rails_autolink from graaff's overlay. This version only
  supports Ruby 1.9 (as the testsuite fails on 1.8), spots a fix for the
  testsuite and the schemes, and support doc building.