@@ -1,5 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX rails_autolink-1.0.9-fixes.patch 1231 SHA256 aae537d66b9c7e2d3a445513917630cd2dfc50b047395f440d80a2fe306f824b SHA512 bf7c6040f38957bc313de54307bfc4502078ce9ec7fb8b1f9622dcdb7759526582475dcd04dc27d803b0f6fa9caf707776a9c0d8c4559fd7a32aaefb2c74fcbe WHIRLPOOL ed97cbd93ad715c79fbce78f9fd640843e466dcbeb9432dac1587424d56d9dcf8275958db976721181f58b3489a7aca09cbb7fee32788d29edc1eca7debfea00
 DIST rails_autolink-1.1.5.gem 12800 SHA256 240b2a25bcc2b1da360b570c4209022f7878dfea0f6ff68ddd8fb0a4d324ae52 SHA512 691f400d525f7d834f16887013a2dad6b64528eb853a8e2fa243d683d84a6de8c6c5c9f95b688c79b8365653cfcc42144158849d6ce52fa350355048ed4523d2 WHIRLPOOL a9458f7ab998e008f525c4ba0c89a6d674a5de002b12610fc2135611ca3c9712ea7a749690a510ad46e574e0005428acc863f02055720254a5a93f3be47fa954
+DIST rails_autolink-1.1.6.gem 13312 SHA256 384c17bee71ca5dc44f49401762f91abb6bc356dd564f380713fc974d2c25671 SHA512 5a9b5c2449a0a69488dbf1de3a87b987b450cfd34b420489a38801d5fcca91a2ac1c6b6b43f2f5699534a9f583a3367452d7e99da3f18619ecc23172949a8b4e WHIRLPOOL 82f51c91595f912908c53a5716a49efc7a686e024a926d29d5427182b6386b96f9294157aa0ca9722ba9f7710bc247cc8dbb9fe23794135db5a955ee705725da
 EBUILD rails_autolink-1.1.5.ebuild 925 SHA256 9bdbd539a142f4dffc961afa6d1b0229b88046edd1f25d9698e1ef5b1e95cced SHA512 638345085c5d7697eb372a7f8ad197d8c9fd5c181c7de1b242a96e9e06f07d5ccf8d14dfa04c149f3ca570c255be2b4760b63a4f7f3b4c1cc666919a42140919 WHIRLPOOL 0757f0aa83bbfc81d45e118065e427e29297dcd875b3623b3163adcfbe19e8548aed118ee14a5fb757d4a8be746b7f5fc5aa09de1e3bacc0ab959fdd81342e69
-MISC ChangeLog 1010 SHA256 695fc84347965cef131904a41d63b0374a9a30e99df830f7c54186d5a071f3b7 SHA512 03c37c44ff5d34e645879bee4a982378a00817263d870e246c37e9b4d2037dfcf4cddfc54b26e09a0ed69b1884f137a2f8d244b7c22dc01ac24c194c61e44a0d WHIRLPOOL 1b44eb116a39e229a438d145e5751f1a3f0f7fb444f8a7df84342c124dfffbdd3b2453d1f576cb9046bb70435bb4dbffc03a1d7b69781ea123f5b929310539d0
+EBUILD rails_autolink-1.1.6.ebuild 658 SHA256 8686348a42285edc421427054dac5d1b23f84ee7752345ff17f84d48c39e9dda SHA512 54352ca20b7090186889d42d90d983a29960a429033e7d017f5dc89a0183a5d145897a2ade80c4f7fd69e342e79db0e02f46d50e422c8f8bde3914442bb523a4 WHIRLPOOL ef2401c3d5fedd9e848d3f06cadb0e3441b0eebc8bc55edd05e661ea28b4ee22e1cf24e70357d4c0c7040afa55cdcdda0aa27f93439df56a8848f26245678be7
+MISC ChangeLog 1145 SHA256 68e7cbb322d5dd97d060883165bd5573134cfabf82d3d07b36b4327d0634d6eb SHA512 8c38a5db7e65ffdfd066ffb01e27fe3959e55145202a4db17bf9ab5200478e923cf4e7904457f3db7af889f7247982c6774688679a0ab39d8acca5b836381a91 WHIRLPOOL d720b11efd80c7773ae12058e041b29a9e9794bff02e430fc655bc24b4472da91310914080aa4d7fa415f64783cd77ac55f62457f60df4077f032861e956dbfa
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlOajhMACgkQiIP6VqMIqNeLRwD9FSb5eo/5t7oG5ctx3++IkTbm
+MCBAUFU+ne7KthKvzKgA/2bWwwUSVsYNI19X4RLk/q4p9uni/Ask27ww9sXfkWAq
+=WiD/
+-----END PGP SIGNATURE-----
