@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rails_autolink
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rails_autolink/ChangeLog,v 1.4 2014/04/24 21:06:42 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rails_autolink/ChangeLog,v 1.5 2014/06/13 05:37:16 graaff Exp $
+
+*rails_autolink-1.1.6 (13 Jun 2014)
+
+  13 Jun 2014; Hans de Graaff <graaff@gentoo.org> +rails_autolink-1.1.6.ebuild:
+  Version bump.
 
   24 Apr 2014; Manuel Rüger <mrueg@gentoo.org> -rails_autolink-1.0.9.ebuild:
   Cleanup old.
